--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta property="og:title" content="Game Zone" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gamezone-ms-app.herokuapp.com" />
+    <meta property="og:image" content="src\assets\GZ02.jpg"/>
+    <meta property="og:description" content="Componente web para aplicación de sistema de gestion de inventario para manipulación de los datos de la aplicación E-commerce GameZone desarrollado en Vue.js junto con Boostrap 4."/>
     <title>Game zone</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
